# sentinelstacks

./: .gitflow  .gitignore  .goreleaser.yml  404.html  ARCHITECTURE.md  CONTRIBUTING.md  CURRENT_STATE.md  DEVELOPMENT_PLAN.md  DOCKER-COMMANDS-IMPLEMENTATION.md  DOCKER-COMMANDS-README.md  Dockerfile  ENHANCEMENTS.md  FIXES-ROUND3.md  FIXES-ROUND4.md  FIXES-ROUND5.md  FIXES.md  IMPLEMENTATION-PROGRESS.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION.md  LICENSE  Makefile  NEXT_STEPS.md  PROGRESS.md  README-cli-enhancement.md  README-docker-commands.md  README-update.md  README.md  ROADMAP.md  SECRETS.md  SETUP.md  TAILWIND_FIX_README.md  TODO.md  add-dependencies.sh  agent-lifecycle-diagram.txt  architecture-diagram.txt  build-clean.sh  build-real-images.sh  build-registry.sh  build-sentinel.sh  build-test.sh  (+70 more)
.github/: changelog-config.json  pull_request_template.md
Formula/: sentinel.rb
GITHUB_PAGES/: index.html
REGISTRY/: index.html
STACK-README/: index.html
api/: index.html
api-usage-guide/: index.html
architecture/: index.html
auth/: htpasswd
core-dag-implementation/: README.md  dag_test.go
desktop/: QUICK_FIX_README.md  README.md  SERVICE_FIX_README.md  TAILWIND_COLOR_FIX_README.md  TAILWIND_FIX_README.md  TAILWIND_TROUBLESHOOTING.md  TAURI_SETUP_README.md  UPDATED_README.md  fix-agent-service.sh  fix-dependencies.sh  fix-tailwind.sh  fix-tauri.sh  fix-vite-setup.sh  index.html  init-new-tauri-project.sh  install-tailwind-postcss.sh  package-lock.json  (+4 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: cli.rs  error.rs  main.rs
(+557 files in other folders)
